--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 id="verification_heading">Verify Your Account</h1>
+	<p id="verification_subtext">We emailed you the sixdigit code to accioojob@email.com Enter the code below
+	to confirm your email address.</p>
+	<div class="code">
+		<input class="code-container" maxlength="1" placeholder="0">
+		<input class="code-container" maxlength="1" placeholder="0">
+		<input class="code-container" maxlength="1" placeholder="0">
+		<input class="code-container" maxlength="1" placeholder="0">
+		<input class="code-container" maxlength="1" placeholder="0">
+		<input class="code-container" maxlength="1" placeholder="0">
+
+	</div>
+	<div id="div_id">
+		<p id="para">
+			This is design only. We didn't actually send you an email as we don't have your email,
+			right?
+		</p>
+		
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
