--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<h1 id="verification_heading">Verify Your Account</h1>
 	<p id="verification_subtext">We emailed you the sixdigit code to accioojob@email.com Enter the code below
 	to confirm your email address.</p>
-	<div class="code">
-		<input class="code-container" maxlength="1" placeholder="0">
-		<input class="code-container" maxlength="1" placeholder="0">
-		<input class="code-container" maxlength="1" placeholder="0">
-		<input class="code-container" maxlength="1" placeholder="0">
-		<input class="code-container" maxlength="1" placeholder="0">
-		<input class="code-container" maxlength="1" placeholder="0">
+	<div class="code-container">
+		<input class="code" maxlength="1" placeholder="0">
+		<input class="code" maxlength="1" placeholder="0">
+		<input class="code" maxlength="1" placeholder="0">
+		<input class="code" maxlength="1" placeholder="0">
+		<input class="code" maxlength="1" placeholder="0">
+		<input class="code" maxlength="1" placeholder="0">
 
 	</div>
 	<div id="div_id">
