--- a/main.html
+++ b/main.html
@@ -12,12 +12,14 @@
 	<p id="verification_subtext">We emailed you the sixdigit code to accioojob@email.com Enter the code below
 	to confirm your email address.</p>
 	<div class="code-container">
-		<input class="code" maxlength="1" placeholder="0">
-		<input class="code" maxlength="1" placeholder="0">
-		<input class="code" maxlength="1" placeholder="0">
-		<input class="code" maxlength="1" placeholder="0">
-		<input class="code" maxlength="1" placeholder="0">
-		<input class="code" maxlength="1" placeholder="0">
+<!-- <div class="code"> -->
+  <input class="code" id="code-1" maxlength="1" placeholder="0">
+  <input class="code" id="code-2" maxlength="1" placeholder="0">
+  <input class="code" id="code-3" maxlength="1" placeholder="0">
+  <input class="code" id="code-4" maxlength="1" placeholder="0">
+  <input class="code" id="code-5" maxlength="1" placeholder="0">
+  <input class="code" id="code-6" maxlength="1" placeholder="0">
+<!-- </div> -->
 
 	</div>
 	<div id="div_id">
